sent many details in all products for the data updation